feat: manage encrypted webhook subscriptions
